[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyLabRobot"
description = "A hardware agnostic platform for lab automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version"]
dependencies = ["typing_extensions==4.15.0"]

[project.optional-dependencies]
serial = ["pyserial==3.5"]
usb = ["pyusb==1.3.1", "libusb-package==1.0.26.1"]
ftdi = ["pylibftdi==0.23.0", "pyusb==1.3.1"]
hid = ["hid==1.0.8"]
modbus = ["pymodbus==3.6.8"]
websockets = ["websockets==15.0.1"]
visualizer = ["websockets==15.0.1"]
opentrons = ["opentrons-http-api-client"]
sila = ["zeroconf>=0.131.0"]
gui = ["flask[async]==3.1.2"]
dev = [
  "PyLabRobot[serial,usb,ftdi,hid,modbus,websockets,visualizer,opentrons,gui,sila]",
  "pytest==8.4.2",
  "pytest-timeout==2.4.0",
  "mypy==1.18.2",
  "sphinx-reredirects==0.1.6",
  "ruff==0.2.1",
  "nbconvert==7.16.6",
  "sphinx-sitemap==2.8.0",
  "pydata-sphinx-theme==0.16.1",
  "myst_nb==1.3.0",
  "sphinx_copybutton==0.5.2",
]
all = ["PyLabRobot[dev]"]

[project.scripts]
plr-gui = "pylabrobot.gui.gui:main"

[project.urls]
Homepage = "https://github.com/pylabrobot/pylabrobot"

[tool.setuptools.dynamic]
version = {file = "pylabrobot/version.txt"}

[tool.setuptools.packages.find]
namespaces = false
exclude = ["tools*", "docs*"]

[tool.setuptools.package-data]
pylabrobot = ["visualizer/*", "version.txt"]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

