[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolink-api"
version = "0.5.8"
license = "MIT"
license-files = ["LICENSE"]
description = "A library to authenticate with yolink device"
readme = "README.md"
authors = [{ name = "YoSmart" }]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
keywords = ["yolink", "api"]
dependencies = [
  "aiohttp>=3.8.1",
  "aiomqtt>=2.0.0,<3.0.0",
  "pydantic>=2.0.0",
  "tenacity>=8.1.0",
]

[project.urls]
"Source" = "https://github.com/YoSmart-Inc/yolink-api"
"Bug Tracker" = "https://github.com/YoSmart-Inc/yolink-api/issues"

[tool.setuptools.packages.find]
include = ["yolink*"]
